feat: add some stuff
